[project]
name = "sandboxpulse"
version = "0.1.0"
description = "Forwards Claude Code / Codex session signals to IM via Hermes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wanghy0804", email = "wanghy0804@users.noreply.github.com" }]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "watchdog>=4.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
sandboxpulse = "sandboxpulse.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandboxpulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM", "RUF"]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # typer.Option as default is idiomatic
  "ASYNC110", # `while True: await sleep` is the intentional daemon idle loop
  "ASYNC240", # sync pathlib in async OK for tests and quick snapshot writes
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ASYNC240"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/sandboxpulse"]
plugins = ["pydantic.mypy"]
